src/styles.css
/* ... */
#active_project_section .notes_grid {
    grid-column: 1 / 3;
    grid-row: 5 / 6;

    flex: 1;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
    grid-auto-rows: minmax(210px, 230px);
    gap: 1rem;

    grid-auto-flow: row;

    padding: 1rem;
    

    overflow-y: auto;
}

#form_note_overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;

    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;

    z-index: 1;
    background-color: var(--overlay-color);

    border: none;

    overflow-y: auto;

    padding-top: 1rem;
}

#form_note_overlay #note_form {
    /* flex: 1; */
   display: flex;
   flex-direction: column;
   justify-content: space-around;

    width: clamp(410px, 100%, 430px);
    height: 510px;

    background-color: var(--theme-color);

    overflow: auto;

    gap: 1rem;

    padding: 1rem;

    border-radius: 1rem;
}

#note_form .note_article_input {
    flex: 1;
    padding-left: 0.7rem;
    padding-right: 0.7rem;
    padding-top: 1rem;
    padding-bottom: 1rem;

    background: var(--dominant-light-color);
    color: var(--dark-gray);
    border: 1px solid var(--soft-gray);
    border-radius: 1rem;
    box-shadow: 0.01rem 0.01rem 0.2rem 0.01rem #918f8f49;


    resize: none;
    overflow-wrap: anywhere;
}

#form_note_overlay .note_article_input:focus {
    outline: 0;
    color: var(--dark-gray);
}

#note_form button {
    width: fit-content;
    align-self: flex-end;
    background-color: var(--dominant-light-color);
    border: 1px solid var(--dominant--secondary-color);
    color: var(--theme-color);
    font-weight: bold;

    padding: 0.1rem 0.3rem;
}

.notes_grid>.note_article {
    position: relative;

    display: flex;

    padding-left: 0.7rem;
    padding-right: 0.7rem;
    padding-top: 2rem;
    padding-bottom: 1rem;

    background: var(--dominant-secondary-color);

    border-radius: 12px;

    /* width: clamp(210px, 100%, 230px); */
    height: 210px;
    white-space: pre-line;

    /* overflow: auto; */

    box-shadow: 0.01rem 0.01rem 0.2rem 0.01rem #918f8f49;

    resize: none;

    /* overflow-wrap: anywhere; */

    cursor: pointer;

}

.note_article>.delete_note_container {
    position: absolute;
    right: 0;
    top: 0;
    align-self: center;
    justify-self: center;

    background-color: var(--soft-gray);

    color: white;
    font-weight: bold;

    height: 1.5rem;
    width: 100%;

    display: flex;
    align-items: center;
    justify-content: end;

    z-index: 1;
    border-radius: 12px 12px 0px 0px;

    overflow: hidden;

    border: 1px solid var(--soft-gray);

}

.note_article>.delete_note_container>.delete_note {
    background-color: red;
    color: var(--dominant-light-color);
    font-weight: bold;
    height: 100%;
    width: 10%;

    align-self: center;
    justify-self: center;

    padding: 0.2rem 0.2rem;

    opacity: 0;


}

.note_article:hover {
    background-color: var(--soft-gray);

}

.note_article:hover .delete_note {
    opacity: 1;
}


.todos_list #todos_header {
    grid-row: 1 / 2;
    height: 40px;
    padding-bottom: 0.5rem;
    border-bottom: solid 0.2rem var(--soft-gray);

    /* Copy todos <li> layout to keep consistency */

    display: grid;
    grid-template-columns: 50fr 25fr 15fr 10fr;

    align-items: center;

    gap: 0.2rem;
}

#todos_header .subject_header {
     /* Copy todos <li> layout to keep consistency */
    grid-column: 1 / 2;
    min-width: 170px;

}

#todos_header .status_header {
    grid-column: 2 / 3;
}

#todos_header .priority_header {
    grid-column: 3 / 4;
    
}

#todos_header .add_todo_btn {
    grid-column: 4 / 5;

    color: var(--dark-gray);
    font-size: 23px;
    background-color: var(--soft-gray);
    border-radius: 0.5rem;

    height: fit-content;
    width: fit-content;

    padding-left: 0.5rem;
    padding-right: 0.5rem;
    padding-top: 0.1rem;
    padding-bottom: 0.1rem;

    justify-self: center; 
}

.todos_list>ul {
    grid-row: 2 / 3;
    display: grid;
    grid-template-columns: 1fr;
    grid-auto-rows: minmax(36px, 50px);
    /* border: 0.1rem solid var(--soft-gray); */

    overflow-y: auto;

    padding: 0;
}


.todos_list>ul>li {
    background-color: var(--dominant-secondary-color);    
    /* border: 1px solid var(--soft-gray); */
    color: var(--dark-text-color);
    list-style: none;

    display: grid;
    align-content: center;

    grid-template-columns: 50fr 25fr 15fr 10fr;

    height: fit-content;
    /* min-width: 405px; */

    padding-top: 0.5rem;
    padding-bottom: 0.5rem;

    gap: 0.2rem;

    border-bottom: 0.1rem solid var(--soft-gray);
}

.list_of_todos>li>.todo_delete{
    grid-column: 4 / 5;

    display: flex;

    grid-column: 4 / 5;
    color: var(--dark-gray);
    font-size: 18px;
    border-radius: 0.5rem;
    height: fit-content;
    width: fit-content;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
    padding-top: 0.1rem;
    padding-bottom: 0.1rem;
    justify-self: center;
    background-color: red;

    opacity: 0;
}

.list_of_todos>li>div>.delete_todo {
    flex: 1;
    
    color: white;
}

/* .todos_list>ul>li>input[type="checkbox"] {
    outline: none;
    border: none;
    grid-column: 1 / 2;
    accent-color: var(--dominant-secondary-color);
    
    min-width: 25px;
    min-height: 10px;

    max-width: 30px;
    max-height: 15px;


    
} */

.todos_list>ul>li>.todo_subject {
    grid-column: 1 / 2;
    overflow: hidden;

    padding-left: 0.1rem;

    min-width: 170px;

    display: flex;
    align-items: center;
    justify-content: flex-start;
}

.todo_subject .todo_subject_btn {
    white-space: nowrap;

    text-decoration: underline;
    color: var(--soft-theme-color);

}
/* ... */

